# PyRPCA

./: README.md  TODO  pyproject.toml
.github/workflows/: ci.yml
pyrpca/: __init__.py  pcp_ialm.py
tests/: test_dummy.py  test_pcp_ialm.py
